knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/HPFUpdates__e.object-meta.xml
<CustomObject>
    <description>Platform event to update the first Scheduled Date in downstream systems.</description>
    <label>HPFUpdates</label>
    <pluralLabel>HPFUpdates</pluralLabel>
</CustomObject>