knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/FirstScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>FirstScheduledDate__c</fullName>
    <description>This is a field to update the first Scheduled Date ( HealthcarePractitionerFacility.First_Scheduled_Date__c )</description>
    <label>FirstScheduledDate</label>
    <type>Date</type>
</CustomField>