knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/GlobalFacilityId__c.field-meta.xml
<CustomField>
    <fullName>GlobalFacilityId__c</fullName>
    <description>This is a field to capture the global facility id ( HealthcarePractitionerFacility.AccountId.Global_Facility_ID__c )</description>
    <label>GlobalFacilityId</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>