knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/GlobalProviderId__c.field-meta.xml
<CustomField>
    <fullName>GlobalProviderId__c</fullName>
    <description>This is the field to update the GlobalProviderId ( HealthcarePractitionerFacility.PractitionerId.Global_Provider_ID__pc)</description>
    <label>GlobalProviderId</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>