knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/HPFId__c.field-meta.xml
<CustomField>
    <fullName>HPFId__c</fullName>
    <description>The Id of the HPF record that has been updated</description>
    <label>HPFId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>