knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/InactiveDate__c.field-meta.xml
<CustomField>
    <fullName>InactiveDate__c</fullName>
    <label>InactiveDate</label>
    <type>Date</type>
</CustomField>