knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HPFUpdates__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is a type field which will be a defaulted to &apos;First Scheduled Date&apos;</description>
    <label>Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>